--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-32x32.png" />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/android-chrome-192x192.png" />
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/android-chrome-512x512.png" />
-    <link rel="manifest" href=%PUBLIC_URL%/site.webmanifest">
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
